--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 
 <head>
-
+    <style type="text/css">
+      body{
+        background:#000000;
+        color:#fff;
+      }
+    </style>
 </head>
 
 <body>
