--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <html>
 
 <head>
-    <style type="text/css">
-      body{
-        background:#000000;
-        color:#fff;
-      }
-    </style>
+    <style rel="stylesheet" type="text/css" href="estilos.css"/>
 </head>
-
 <body>
 
 <h1> ¡Hola mundo somos Fujama Company! </h1>
