--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <style rel="stylesheet" type="text/css" href="estilos.css"/>
+    <style rel="stylesheet" href="estiloprueba.css">
 </head>
 <body>
 
