--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1> ¡Hola mundo somos Fujama Company! </h1>
+<h1> ¡Hola mundo somos Fujama Company! prueba</h1>
 
 </body>
 </html>
